# nexus-databoard

./: .env.sample  .gitignore  Dockerfile  LICENSE  Makefile  Makefile_bak  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run
.github/workflows/: release.yml
.streamlit/: config.toml
docker/: entrypoint.sh
examples/: Dockerfile  README.md  deploy.sh  docker-compose.yml  entrypoint.sh  requirements.txt  run
examples/src/: app.py
examples/src/pages/: savantly-custom-report.py
examples/src/reports/: savantly-custom-report.py
helm/: Chart.yaml  README.md  values.yaml
helm/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
helm/templates/tests/: test-connection.yaml
src/: Home.py  config.py  default-settings.py  page_setup.py  template_loader.py
src-back/nexus_databoard/.streamlit/: config.toml
src-back/nexus_databoard/common/: email.py
src-back/nexus_databoard/components/: download.py
src-back/nexus_databoard/pages/: 01_Example-1.py  03_Example-3.py
src/authz/: authorization.py  user.py
src/common/: config.py
src/components/: chart_line.py  controls.py  default_footer.py  default_header.py  i_render.py  layout_page.py  table.py
src/data/: database.py  google_sheets.py
src/nexus_databoard/: Home.py
src/nexus_databoard/common/: page_config.py
src/nexus_databoard/data/: db.py
src/nexus_databoard/pages/: 01_Example-1.py  02_Example-2.py
src/pages/: 02_Example-2.py  03_Example-3.py  04_Example-4.py  05_Example-5.py
