[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nexus_databoard"
version = "0.0.2"
authors = [
  { name="Jeremy Branham", email="jeremy@savantly.net" },
]
description = "An oppinionated data science project template for the Nexus platform. An abstraction over Streamlit."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/savantly-net/nexus-databoard"
"Bug Tracker" = "https://github.com/savantly-net/nexus-databoard/issues"